k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resta-deployment
  namespace: microservices-qa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: resta
  template:
    metadata:
      labels:
        app: resta
    spec:
      containers:
      - name: resta
        image: carlosdelgadillo/resta:v2
        ports:
        - containerPort: 8004
