k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resta-service
  namespace: resta
spec:
  selector:
    app: resta
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8004
  type: LoadBalancer
